--- a/client/src/components/pages/QuestionnairePreview/QuestionnairePreview.scss
+++ b/client/src/components/pages/QuestionnairePreview/QuestionnairePreview.scss
@@ -7,12 +7,14 @@
 	flex-direction: column;
 	justify-content: center;
 	text-align: center;
-	padding: 1em;
+	padding: 0 1em;
 
 	.closing-section {
-		position: absolute;
-		bottom: 100px;
+		bottom: 1em;
+		box-sizing: border-box;
 		left: 0;
+		padding: 0 1em;
+		position: absolute;
 	}
 
 	.continue-button-container {
@@ -22,6 +24,7 @@
 	.questionnaire-description {
 		font-family: 'Northwell';
 		line-height: 1.2;
+		font-size: 40px;
 	}
 
 	.closing-note {
